--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^2.21.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll-into-view": "^1.8.2",
     "yup": "^0.29.3"
   },
   "scripts": {
