--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.20.0",
     "emoji-mart": "^3.0.0",
     "formik": "^2.1.5",
+    "jwt-decode": "^3.0.0-beta.2",
     "moment": "^2.28.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
