--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.28.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-particles-js": "^3.3.0",
     "react-query": "^2.21.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
